fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Commitmenttopurchaseifgoalsmet__c.field-meta.xml
<CustomField>
    <fullName>Commitmenttopurchaseifgoalsmet__c</fullName>
    <description>PICC, Endurance, Arterials, Midline
Value Proposition Stage
Define Successful Trial/Evaluation Goals</description>
    <inlineHelpText>PICC, Endurance, Arterials, Midline
Value Proposition Stage
Define Successful Trial/Evaluation Goals</inlineHelpText>
    <label>*Commitment to purchase if goals met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>