fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Common_Reason_s_for_catheter_removable__c.field-meta.xml
<CustomField>
    <fullName>Common_Reason_s_for_catheter_removable__c</fullName>
    <description>Common Reason(s) for catheter removable (no return, waveform, dampened, patient removal)?</description>
    <inlineHelpText>Common Reason(s) for catheter removable (no return, waveform, dampened, patient removal)?</inlineHelpText>
    <label>Common Reason(s) for catheter removable?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>