fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Complete_mock_run_through_set_up__c.field-meta.xml
<CustomField>
    <fullName>Complete_mock_run_through_set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Complete mock run-through/set-up</description>
    <inlineHelpText>Complete mock run-through/set-up</inlineHelpText>
    <label>Complete mock run-through/set-up</label>
    <type>Checkbox</type>
</CustomField>