fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Confirm_Ability_to_Mount_VPS_Rythm_DLX__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Ability_to_Mount_VPS_Rythm_DLX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm ability to mount VPS Rhythm DLX 6 from ultrasound etc(recommended Cart which has been tip tested is RHY-100-CARTA)</description>
    <inlineHelpText>Confirm ability to mount VPS Rhythm DLX 6 from ultrasound etc(recommended Cart which has been tip tested is RHY-100-CARTA)</inlineHelpText>
    <label>Confirm Ability to Mount VPS Rythm DLX</label>
    <type>Checkbox</type>
</CustomField>