fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Confirm_Discuss_with_Radiology_IR__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Discuss_with_Radiology_IR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm discussion with Radiology/IR has occurred prior to evaluation (e.g. CXR elimination, etc.). Provide example policy if required and Information for Radiology.</inlineHelpText>
    <label>Confirm Discuss with Radiology/IR</label>
    <type>Checkbox</type>
</CustomField>