fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Confirm_evaluation_dates__c.field-meta.xml
<CustomField>
    <fullName>Confirm_evaluation_dates__c</fullName>
    <description>Confirm evaluation dates
PICC, Midline, Arterials
Trial/Evaluation Stage
Develop Education Plan/Sales</description>
    <label>Confirm evaluation dates</label>
    <type>Date</type>
</CustomField>