fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Confirm_to_mount_VPS_Rhythm_Device__c.field-meta.xml
<CustomField>
    <fullName>Confirm_to_mount_VPS_Rhythm_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VPS Rhythm® Device:
Confirm ability to mount VPS Rhythm® Device 6&quot; from Ultrasound, etc.(Recommended cart, which has been tip-tested is RHY-100-CARTA)</description>
    <inlineHelpText>VPS Rhythm® Device:
Confirm ability to mount VPS Rhythm® Device 6&quot; from Ultrasound, etc.(Recommended cart, which has been tip-tested is RHY-100-CARTA)</inlineHelpText>
    <label>Confirm to mount VPS Rhythm® Device...</label>
    <type>Checkbox</type>
</CustomField>