fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmed?</description>
    <inlineHelpText>Confirmed?</inlineHelpText>
    <label>Confirmed?</label>
    <type>Checkbox</type>
</CustomField>