fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ConfirmObservationDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmObservationDate__c</fullName>
    <description>PICC, Endurance, Midline, Arterials
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>PICC, Endurance, Midline, Arterials
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Confirm Observation Date</label>
    <type>Date</type>
</CustomField>