fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Continue_to_update_strong_champion_s__c.field-meta.xml
<CustomField>
    <fullName>Continue_to_update_strong_champion_s__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Continue to update strong champion(s)</description>
    <inlineHelpText>Continue to update strong champion(s)</inlineHelpText>
    <label>Continue to update strong champion(s)</label>
    <type>Checkbox</type>
</CustomField>