fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Current_discharge_practices__c.field-meta.xml
<CustomField>
    <fullName>Current_discharge_practices__c</fullName>
    <description>Current discharge practices</description>
    <inlineHelpText>Current discharge practices</inlineHelpText>
    <label>Current discharge practices:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>