fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Current_midline_policy__c.field-meta.xml
<CustomField>
    <fullName>Current_midline_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current midline policy?</description>
    <inlineHelpText>Current midline policy?</inlineHelpText>
    <label>Current midline policy?</label>
    <type>Checkbox</type>
</CustomField>