fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Current_Policy_and_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Current_Policy_and_Procedure__c</fullName>
    <description>Current Policy and Procedure includes the use of U/S to place PIV’s?
Endurance
Needs Analysis
Vetting</description>
    <inlineHelpText>Current Policy and Procedure includes the use of U/S to place PIV’s?
Endurance
Needs Analysis
Vetting</inlineHelpText>
    <label>*Current Policy and Procedure...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>