fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Currently_using_a_Vascular_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Currently_using_a_Vascular_Algorithm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently using a Vascular Algorithm?
Endurance
Needs Analysis
Vetting</description>
    <inlineHelpText>Currently using a Vascular Algorithm?
Endurance
Needs Analysis
Vetting</inlineHelpText>
    <label>Currently using a Vascular Algorithm?</label>
    <type>Checkbox</type>
</CustomField>