fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CurrentSuccessRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentSuccessRate__c</fullName>
    <description>Current Success Rate? (days)
Endurance
Needs Analysis
Vetting</description>
    <inlineHelpText>Current Success Rate? (days)
Endurance
Needs Analysis
Vetting</inlineHelpText>
    <label>Current Success Rate?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>