fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Customer_evaluations__c.field-meta.xml
<CustomField>
    <fullName>Customer_evaluations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer evaluations</description>
    <inlineHelpText>Customer evaluations</inlineHelpText>
    <label>Customer evaluations</label>
    <type>Checkbox</type>
</CustomField>