fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Customer_Goals__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goals__c</fullName>
    <description>(e.g. Infection Reduction — min 90 days/max 180 days; ease of use i.e. minimal # of PICCs). (e.g. Transitioning to a midline to reduce CLABSI rate and/or reduce occlusions. If customer is evaluating, ensure minimal # of midlines to establish ease of use).
PICC, Midline
Value Proposition Stage
Define Successful Trial/Evaluation Goals</description>
    <inlineHelpText>(e.g. Infection Reduction ... i.e. minimal # of PICCs). (e.g. Transitioning to a midline to reduce CLABSI ... to establish ease of use).
PICC, Midline
Value Proposition Stage
Define Successful Trial/Evaluation Goals</inlineHelpText>
    <label>*Customer Goals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>