fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CVC_Large_Bore_Yrly_Volume__c.field-meta.xml
<CustomField>
    <fullName>CVC_Large_Bore_Yrly_Volume__c</fullName>
    <label>CVC/Large Bore Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>