fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CVCTXT__c.field-meta.xml
<CustomField>
    <fullName>CVCTXT__c</fullName>
    <description>Current Manufacture CVC</description>
    <inlineHelpText>Current Manufacture CVC</inlineHelpText>
    <label>CVC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>