fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CVCYrlyVolume__c.field-meta.xml
<CustomField>
    <fullName>CVCYrlyVolume__c</fullName>
    <description>Current Manufacture CVC/Yrly Volume</description>
    <inlineHelpText>Current Manufacture CVC/Yrly Volume</inlineHelpText>
    <label>CVC/Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>