fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CXR__c.field-meta.xml
<CustomField>
    <fullName>CXR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CXR</label>
    <type>Checkbox</type>
</CustomField>