fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Daily_debrief_adjust_process_as_needed_1__c.field-meta.xml
<CustomField>
    <fullName>Daily_debrief_adjust_process_as_needed_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily debrief, adjust process as needed</label>
    <type>Checkbox</type>
</CustomField>