fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Data_collection_tool_Excel_spreadsheet__c.field-meta.xml
<CustomField>
    <fullName>Data_collection_tool_Excel_spreadsheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data collection tool/Excel spreadsheet</description>
    <inlineHelpText>Data collection tool/Excel spreadsheet</inlineHelpText>
    <label>Data collection tool/Excel spreadsheet</label>
    <type>Checkbox</type>
</CustomField>