fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Def_Sales_Clinical_support_during_eval__c.field-meta.xml
<CustomField>
    <fullName>Def_Sales_Clinical_support_during_eval__c</fullName>
    <inlineHelpText>Define Sales/Clinical support during evaluation (e.g. Team works 24/7; ensure realistic expectations are discussed/committed to)</inlineHelpText>
    <label>*Def Sales/Clinical support during eval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>