fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Deliver_education_session_with_Rad_Techs__c.field-meta.xml
<CustomField>
    <fullName>Deliver_education_session_with_Rad_Techs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deliver education session with Rad Techs (if correlations are required)</description>
    <inlineHelpText>Deliver education session with Rad Techs (if correlations are required)</inlineHelpText>
    <label>Deliver education session with Rad Techs</label>
    <type>Checkbox</type>
</CustomField>