fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Deliver_review_Online_Training_Slides__c.field-meta.xml
<CustomField>
    <fullName>Deliver_review_Online_Training_Slides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deliver/review Impl. Online Training Slides(2013-2331 VPS G4™ Device – Implementation Education)</description>
    <inlineHelpText>Deliver/review Implementation Online Training Slides(2013-2331 VPS G4™ Device – Implementation Education)</inlineHelpText>
    <label>Deliver/review Online Training Slides</label>
    <type>Checkbox</type>
</CustomField>