fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Demonstrate_pin_point_pressure_dressing__c.field-meta.xml
<CustomField>
    <fullName>Demonstrate_pin_point_pressure_dressing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinically demonstrate kit and all components (do not demo VTFX capital equipment  on a metal table)</description>
    <inlineHelpText>Clinically demonstrate kit and all components (do not demo VTFX capital equipment  on a metal table)</inlineHelpText>
    <label>Clinically demo kit + components</label>
    <type>Checkbox</type>
</CustomField>