fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Dept4_of_Inserters_for_Eval_Trial__c.field-meta.xml
<CustomField>
    <fullName>Dept4_of_Inserters_for_Eval_Trial__c</fullName>
    <description>Arterials
Needs Analysis Stage
Inserter</description>
    <inlineHelpText>Arterials
Needs Analysis Stage
Inserter</inlineHelpText>
    <label>Dept4-# of Inserters for Eval/Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>