fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Determine_next_steps_and_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Determine_next_steps_and_follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine next steps and follow-up</description>
    <inlineHelpText>Determine next steps and follow-up</inlineHelpText>
    <label>Determine next steps and follow-up</label>
    <type>Checkbox</type>
</CustomField>