fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Device_Only_or_Kits__c.field-meta.xml
<CustomField>
    <fullName>Device_Only_or_Kits__c</fullName>
    <description>Device Only or Kits?</description>
    <inlineHelpText>Device Only or Kits?</inlineHelpText>
    <label>Device Only or Kits?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>