fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Dischargepractices__c.field-meta.xml
<CustomField>
    <fullName>Dischargepractices__c</fullName>
    <description>PICC,Endurance, Midline
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>PICC,Endurance, Midline
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Discharge practices</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>