fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Case_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss clinical education that Case Management will provide for home care agencies, LTAC,
community outpatient clinics
PICC,END, Midline
Trial/Evaluation Stage
Round Table w/the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>Discuss clinical education that Case Management will provide for home care agencies, LTAC,
community outpatient clinics
PICC,END, Midline
Trial/Evaluation Stage
Round Table w/the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Discuss Case Management...</label>
    <type>Checkbox</type>
</CustomField>