fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_changes_to_line_release__c.field-meta.xml
<CustomField>
    <fullName>Discuss_changes_to_line_release__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss changes to line release documentation for outside facilities that will go with the patient</description>
    <inlineHelpText>Discuss changes to line release documentation for outside facilities that will go with the patient</inlineHelpText>
    <label>Discuss changes to line release...</label>
    <type>Checkbox</type>
</CustomField>