fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_coaching_expectations__c.field-meta.xml
<CustomField>
    <fullName>Discuss_coaching_expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss bedside coaching expectations during procedure with each inserter and Teleflex team
(include troubleshooting, tips and tricks)</description>
    <inlineHelpText>Discuss bedside coaching expectations during procedure with each inserter and Teleflex team
(include troubleshooting, tips and tricks)</inlineHelpText>
    <label>Discuss coaching expectations...</label>
    <type>Checkbox</type>
</CustomField>