fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/discuss_details_with_IR_agreeing_fluoro__c.field-meta.xml
<CustomField>
    <fullName>discuss_details_with_IR_agreeing_fluoro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If agreeing to fluoro correlation discuss details with IR</description>
    <inlineHelpText>If agreeing to fluoro correlation discuss details with IR</inlineHelpText>
    <label>discuss details with IR agreeing fluoro</label>
    <type>Checkbox</type>
</CustomField>