fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_movement_of_PICC__c.field-meta.xml
<CustomField>
    <fullName>Discuss_movement_of_PICC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Discuss movement of PICC based on patient position (e.g.lowering arm, head of bed location, deep breath, etc.)</inlineHelpText>
    <label>Discuss movement of PICC...</label>
    <type>Checkbox</type>
</CustomField>