fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_need_for_pressure_dressing__c.field-meta.xml
<CustomField>
    <fullName>Discuss_need_for_pressure_dressing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss need for pressure dressing protocol (pin point/min 2 mins of pressure) and post procedure monitoring of patient
PICC, Midline
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>Discuss need for pressure dressing protocol (pin point/min 2 mins of pressure) and post procedure monitoring of patient
PICC, Midline
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Discuss need for pressure dressing...</label>
    <type>Checkbox</type>
</CustomField>