fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_preferred_and_why__c.field-meta.xml
<CustomField>
    <fullName>Discuss_preferred_and_why__c</fullName>
    <description>Discuss with RSM/RCEM/CEM which is preferred and why
(Experience has shown going last is most successful).</description>
    <inlineHelpText>Discuss with RSM/RCEM/CEM which is preferred and why
(Experience has shown going last is most successful).</inlineHelpText>
    <label>Discuss preferred and why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>