fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_Product_Differences__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Product_Differences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss product differences the inserter may
experience compared to current product
• Non-taper
• Catheter stiffness — difference in feel
• User’s comfort level with a buddy wire
• GlideThru® Sheath — reduces need for skin nick
• Explain A and B bevel/safety non-safety needles
• Nitinol 45 cm wire vs stainless
• IR/Radiology — Hydrophilic coated wire
• Dressing protocol related to antithrombogenic
properties
• Reinforce clamping if moving from valved catheter</description>
    <inlineHelpText>Discuss product differences the inserter may
experience compared to current product
• Non-taper
• Catheter stiffness — difference in feel
• User’s comfort level with a buddy wire
• GlideThru® Sheath — reduces need for skin nick
• Explain A and B bevel/safety non-safety needles
• Nitinol 45 cm wire vs stainless
• IR/Radiology — Hydrophilic coated wire
• Dressing protocol related to antithrombogenic
properties
• Reinforce clamping if moving from valved catheter</inlineHelpText>
    <label>Discuss Product Differences...</label>
    <type>Checkbox</type>
</CustomField>