fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_same_day_discharge_post_plac_ed__c.field-meta.xml
<CustomField>
    <fullName>Discuss_same_day_discharge_post_plac_ed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>What is facility protocol/procedure for the following?</description>
    <inlineHelpText>What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Discuss same day discharge post/plac/ed</label>
    <type>Checkbox</type>
</CustomField>