fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Discuss_stabilization_securement_device__c.field-meta.xml
<CustomField>
    <fullName>Discuss_stabilization_securement_device__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss applying stabilization/securement device</description>
    <inlineHelpText>Discuss applying stabilization/securement device</inlineHelpText>
    <label>Discuss stabilization/securement device</label>
    <type>Checkbox</type>
</CustomField>