fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Do_goals_align_Required__c.field-meta.xml
<CustomField>
    <fullName>Do_goals_align_Required__c</fullName>
    <inlineHelpText>Teleflex Goals: Do goals align?</inlineHelpText>
    <label>*Do goals align?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>