fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Do_they_have_an_UT_CP_P__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_an_UT_CP_P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they have an ultrasound training/competency program/process?
Endurance
Needs Analysis
Vetting</description>
    <inlineHelpText>Do they have an ultrasound training/competency program/process?
Endurance
Needs Analysis
Vetting</inlineHelpText>
    <label>Do they have an UT/CP/P</label>
    <type>Checkbox</type>
</CustomField>