fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Do_you_separate_rates_complication_CLABS__c.field-meta.xml
<CustomField>
    <fullName>Do_you_separate_rates_complication_CLABS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you separate rates/complication/CLABSI by Vascular Access device?</description>
    <inlineHelpText>Needs Analysis: (Identify Hospital Rates (%))

Do you separate rates/complication/CLABSI by Vascular Access device?</inlineHelpText>
    <label>Do you separate rates/complication...</label>
    <type>Checkbox</type>
</CustomField>