fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Does_account_track__c.field-meta.xml
<CustomField>
    <fullName>Does_account_track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does account track metrics?</label>
    <type>Checkbox</type>
</CustomField>