fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Does_VAT_Team_IR_Use_the_Same_PICC__c.field-meta.xml
<CustomField>
    <fullName>Does_VAT_Team_IR_Use_the_Same_PICC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does VAT Team&amp; IR Use the Same PICC?</label>
    <type>Checkbox</type>
</CustomField>