fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Dressing_Boards__c.field-meta.xml
<CustomField>
    <fullName>Dressing_Boards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dressing Boards
PICC, Midline,
Trial/Evaluation Stage
Develop Education Plan/Clinical
Create the following (Nursing Educator approval is required):</description>
    <inlineHelpText>Dressing Boards
PICC, Midline,
Trial/Evaluation Stage
Develop Education Plan/Clinical
Create the following (Nursing Educator approval is required):</inlineHelpText>
    <label>Dressing Boards</label>
    <type>Checkbox</type>
</CustomField>