fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ED__c.field-meta.xml
<CustomField>
    <fullName>ED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ED:</label>
    <type>Checkbox</type>
</CustomField>