fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Email_approved_eval_temp_2_facility_con__c.field-meta.xml
<CustomField>
    <fullName>Email_approved_eval_temp_2_facility_con__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email approved evaluation template to facility contact (pre-work, start date, schedule, team didactic/hands on sessions)</description>
    <inlineHelpText>Email approved evaluation template to facility contact (pre-work, start date, schedule, team didactic/hands on sessions)</inlineHelpText>
    <label>Email approved eval temp to facility con</label>
    <type>Checkbox</type>
</CustomField>