fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/EngageEdDepFlushingClampingComp__c.field-meta.xml
<CustomField>
    <fullName>EngageEdDepFlushingClampingComp__c</fullName>
    <description>Engage Education Department regarding flushing/clamping compliance
Central Line Dressing products. (e.g. BioPatch®,Tegaderm™, Tegaderm™ CHG, etc.)
PICC, Midline, Arterials
Trial/Evaluation Stage
Round Table with the Account/Clinical</description>
    <inlineHelpText>Engage Education Department regarding flushing/clamping compliance
Central Line Dressing products. (e.g. BioPatch®,Tegaderm™, Tegaderm™ CHG, etc.)
PICC, Midline, Arterials
Trial/Evaluation Stage
Round Table with the Account/Clinical</inlineHelpText>
    <label>Engage Ed/Dep Flushing/Clamping Comp...</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>