fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Ensure_catheters_are_audited__c.field-meta.xml
<CustomField>
    <fullName>Ensure_catheters_are_audited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensure catheters are audited post insertion to monitor performance
PICC, Midline, Endurance, Arterials
Trial/Evaluation Stage
Evaluation Go Live/Clinical
Bedside Education:</description>
    <inlineHelpText>Ensure catheters are audited post insertion to monitor performance
PICC, Midline, Endurance, Arterials
Trial/Evaluation Stage
Evaluation Go Live/Clinical
Bedside Education:</inlineHelpText>
    <label>Ensure catheters are audited</label>
    <type>Checkbox</type>
</CustomField>