fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Ensure_Department_Head_Know_Eval_Expect__c.field-meta.xml
<CustomField>
    <fullName>Ensure_Department_Head_Know_Eval_Expect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensure Department Heads know about the
evaluation and what to expect</description>
    <inlineHelpText>Ensure Department Heads know about the
evaluation and what to expect</inlineHelpText>
    <label>Ensure Department Head Know Eval&amp;Expect</label>
    <type>Checkbox</type>
</CustomField>