fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Equipment_Submission_Process__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Submission_Process__c</fullName>
    <description>Elaborate on Greenlight, MedApproved, etc.</description>
    <inlineHelpText>Elaborate on Greenlight, MedApproved, etc.</inlineHelpText>
    <label>Equipment Submission Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>