fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ER__c.field-meta.xml
<CustomField>
    <fullName>ER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ER</label>
    <type>Checkbox</type>
</CustomField>