fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Establish_check_points__c.field-meta.xml
<CustomField>
    <fullName>Establish_check_points__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Establish check points/progress report meetings
throughout the trial (e.g. monthly with decision
makers/champion)</description>
    <inlineHelpText>Establish check points/progress report meetings
throughout the trial (e.g. monthly with decision
makers/champion)</inlineHelpText>
    <label>Establish check points</label>
    <type>Checkbox</type>
</CustomField>