fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Eval_schedule_Cnfrm_resources__c.field-meta.xml
<CustomField>
    <fullName>Eval_schedule_Cnfrm_resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluation schedule (confirm resources — RCSM, CSS, Contractor)</description>
    <inlineHelpText>Evaluation schedule (confirm resources — RCSM, CSS, Contractor)</inlineHelpText>
    <label>Eval schedule(Cnfrm resources)</label>
    <type>Checkbox</type>
</CustomField>