fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Evaluation_house_wide_or_unit_specific__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_house_wide_or_unit_specific__c</fullName>
    <label>Evaluation house-wide or unit specific?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>