fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Existing_Service_Contract_Purchased_by__c.field-meta.xml
<CustomField>
    <fullName>Existing_Service_Contract_Purchased_by__c</fullName>
    <label>Existing Service Contract Purchased by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biomed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>