fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Existing_Tip_Confirmation_System__c.field-meta.xml
<CustomField>
    <fullName>Existing_Tip_Confirmation_System__c</fullName>
    <description>manufacturer,quantity, location, etc.</description>
    <label>Existing Tip Confirmation System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sherlock 3cg from BD</fullName>
            </value>
            <value>
                <fullName>Ultrasound Model</fullName>
                <isActive>false</isActive>
                <label>Ultrasound Model</label>
            </value>
            <value>
                <fullName>VPS G4 from Teleflex</fullName>
            </value>
            <value>
                <fullName>VPS Rythm Device from Teleflex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>