fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Extended_Dwell_Forearm__c.field-meta.xml
<CustomField>
    <fullName>Extended_Dwell_Forearm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Dwell Forearm</label>
    <type>Checkbox</type>
</CustomField>