fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Extended_Dwell_Size_Length_s__c.field-meta.xml
<CustomField>
    <fullName>Extended_Dwell_Size_Length_s__c</fullName>
    <label>*Extended Dwell Size/Length(s)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>