fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ExtendedDwellTXT__c.field-meta.xml
<CustomField>
    <fullName>ExtendedDwellTXT__c</fullName>
    <description>Current Manufacture Extended Dwell</description>
    <inlineHelpText>Current Manufacture Extended Dwell</inlineHelpText>
    <label>*Extended Dwell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>