fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ExtendedDwellYrlyVolume__c.field-meta.xml
<CustomField>
    <fullName>ExtendedDwellYrlyVolume__c</fullName>
    <description>Current Manufacture Extended Dwell\Yrly Volume</description>
    <inlineHelpText>Current Manufacture Extended Dwell\Yrly Volume</inlineHelpText>
    <label>*Extended Dwell\Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>